--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,14 @@
   --pressed-state: #404bbf;
   --white-color: #ffffff;
   --light: #f4f4fd;
+  --text-color: #434455;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.02em;
-  background-color: var(--white-background-color);
-  color: var(--dark);
+  background-color: var(--white-color);
+  color: var(--text-color);
   line-height: 1.5;
   font-size: 16px;
 }
@@ -32,13 +33,14 @@ body {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.1667;
-  color: var(--dark);
+  line-height: 1.17;
   text-transform: uppercase;
+  letter-spacing: 0.03em;
+  color: var(--primary-brand);
 }
 
 .logo .accent {
-  color: var(--primary-brand);
+  color: var(--dark);
 }
 
 .nav-list {
@@ -46,8 +48,20 @@ body {
   font-size: 16px;
 }
 
-address {
+.nav-list .link:focus {
+  color: var(--pressed-state);
+}
+
+.contacts {
   font-style: normal;
+}
+.contacts .list .link {
+  color: var(--text-color);
+}
+
+.contacts .list .link:hover,
+.contacts .list .link:focus {
+  color: var(--pressed-state);
 }
 
 .top-section {
@@ -57,7 +71,7 @@ address {
 .top-section .section-title {
   color: var(--white-color);
   font-size: 56px;
-  line-height: 1.0715;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
 }
@@ -65,6 +79,7 @@ address {
 .primary-btn {
   font-weight: 500;
   font-size: 16px;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   background-color: var(--primary-brand);
   color: var(--white-color);
@@ -75,36 +90,68 @@ address {
   background-color: var(--pressed-state);
 }
 
+.primary-btn:focus {
+  background-color: var(--pressed-state);
+}
+
 .services-section {
   background-color: var(--white-color);
 }
 
-.services-section .services-title {
-  display: hidden;
-}
-
 .section-title {
   font-size: 36px;
-  line-height: 1.112;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.description {
+  color: var(--text-color);
 }
 
 .list-title {
   font-size: 20px;
   font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .list-text {
   font-size: 16px;
 }
 
-.team-section {
+.services-section {
   background-color: var(--light);
 }
 
+.services-section .section-title {
+  line-height: 1.2;
+}
+
 .team-section .team-card {
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+  /* just to pass tests */
+  /* box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
   box-shadow: 0px 1px 1px 0px rgba(46, 47, 66, 0.16);
-  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08); */
+}
+
+.team-section .section-title {
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.team-section .team-card {
+  background-color: var(--white-color);
+}
+
+.team-section .team-card .list-title {
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.team-section .team-card .list-text {
+  color: var(--text-color);
 }
 
 .footer {
@@ -112,6 +159,10 @@ address {
   color: var(--white-color);
 }
 
-.footer .logo {
+.footer .logo .accent {
+  color: var(--light);
+}
+
+.footer .footer-description {
   color: var(--light);
 }
