add visually hidden

--- a/css/styles.css
+++ b/css/styles.css
@@ -264,8 +264,16 @@ body {
 }
 
 .visually-hidden {
-  visibility: hidden;
   position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .portfolio .section-title {
@@ -285,7 +293,7 @@ body {
 }
 
 .portfolio .border-container {
-  padding-left: 16px;
+  padding: 32px 16px;
 }
 
 .border-container {
