--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,18 @@ body {
 
 .top-section {
   padding: 188px 0;
+  background-image: url('/images/top_bg.jpg');
+  position: relative;
+}
+
+.top-section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.7); 
 }
 
 .top-section .container {
@@ -99,6 +111,8 @@ body {
   justify-content: center;
   align-items: center;
   gap: 48px;
+  position: relative;
+  z-index: 1;
 }
 
 .nav-list,
