--- a/css/styles.css
+++ b/css/styles.css
@@ -248,10 +248,12 @@ body {
   text-transform: capitalize;
   margin-bottom: 72px;
 }
+
 .team-section .list {
   display: flex;
   gap: 24px;
   justify-content: center;
+  width: 100%;
 }
 
 .team-section .team-card {
@@ -259,6 +261,11 @@ body {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
   text-align: center;
+  padding-bottom: 32px;
+}
+
+.team-card .description {
+  margin-bottom: 8px;
 }
 
 .team-section .team-card .list-title {
@@ -275,6 +282,8 @@ body {
   background-color: var(--dark);
   color: var(--white-color);
   padding: 100px 0;
+  display: flex;
+  align-items: baseline;
 }
 
 .footer .link {
@@ -291,6 +300,10 @@ body {
   max-width: 264px;
 }
 
+.footer .container {
+  display: flex;
+  gap: 120px
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -328,4 +341,94 @@ body {
   border: 1px solid #e7e9fc;
   border-top: none;
   padding: 32px 0;
+}
+
+.socials {
+  display: flex;
+  gap: 24px;
+  width: 232px;
+  height: 40px;
+  justify-content: center;
+}
+
+.socials-items {
+  width: 40px;
+  height: 40px;
+ 
+ 
+
+
+}
+
+
+.socials-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 0;
+      border: none;
+      border-radius: 50%;
+      background-color: #4d5ae5;
+      padding: 12px 12px;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.socials-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #f4f4fd;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.socials-icon:hover,
+.socials-icon:focus,
+.socials-link:hover,
+.socials-link:focus {
+  background-color: #404bbf;
+}
+
+
+.footer-socials-subtitle {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+  padding: 0;
+}
+
+.footer-socials {
+  display: flex;
+  gap: 16px;  
+  
+}
+
+.footer-socials-items {
+  width: 40px;
+  height: 40px;
+ 
+}
+
+.footer-socials-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-socials-icon {
+  fill: #f4f4fd;
+}
+
+.footer-socials-link:hover,
+.footer-socials-link:focus {
+  background-color: #31d0aa;
 }
