--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,21 @@ body {
   z-index: 1;
 }
 
+.nav .link.current {
+  position: relative;
+}
+
+.nav .link.current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--pressed-state);
+  border-radius: 2px;
+}
+
 .nav-list,
 .header .contacts-list {
   display: flex;
@@ -335,6 +350,30 @@ body {
 
 .portfolio .border-container {
   padding: 32px 16px;
+}
+
+.tile {
+  position: relative;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%); 
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  padding: 40px 32px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+}
+.tile:hover .overlay {
+  transform: translateY(0);
 }
 
 .border-container {
