--- a/css/styles.css
+++ b/css/styles.css
@@ -1,324 +1,226 @@
-:root {
-  --dark: #2e2f42;
-  --primary-brand: #4d5ae5;
-  --pressed-state: #404bbf;
-  --white-color: #ffffff;
-  --light: #f4f4fd;
-  --text-color: #434455;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-}
+body {
+  font-family: 'Roboto', sans-serif;
+  color: #434455;
+  background-color: #ffffff;
+   }
 
 img {
   display: block;
 }
 
+/* reset */
+
+ul,
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+/* common */
+
 .container {
-  width: 1158px;
+  max-width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
 }
 
-body {
-  font-family: "Roboto", sans-serif;
-  letter-spacing: 0.02em;
-  background-color: var(--white-color);
-  color: var(--text-color);
-  line-height: 1.5;
-  font-size: 16px;
+/* header */
+
+.page-header {
+  margin: auto;
+  width: 1440px;
+  height: 72px;
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+
 }
 
-.list {
-  list-style-type: none;
+.header-container {
+  display: flex;
+  align-items: center;
 }
 
-.link {
-  text-decoration: none;
-  color: var(--dark);
-  transition: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link:hover {
-  color: var(--pressed-state);
-}
-
-.nav-list .link {
-  padding: 24px 0;
+.header-nav {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
-  text-transform: uppercase;
   letter-spacing: 0.03em;
-  color: var(--primary-brand);
-}
-.header {
-  border-bottom: 1px solid #e7e9fc;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 
-.header .container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.header .logo {
+.header-logo {
+  padding: 24px 0;
   margin-right: 76px;
 }
 
-.header .nav {
+.header-logo .logo-part {
+  color: #2e2f42;
+}
+
+.footer-logo .logo-part {
+  color: #f4f4fd;
+}
+
+.nav-list {
   display: flex;
   align-items: center;
+  gap: 40px;
+  
+}
+.nav-item {
+
 }
 
-.section {
-  padding: 120px 0;
-}
+.nav-link {
+  display: block;
+  padding: 24px 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
+  }
 
-.top-section {
-  padding: 188px 0;
-  background-image: url('/images/top_bg.jpg');
+.nav-link.current {
   position: relative;
+
 }
 
-.top-section::before {
+.nav-link.current::after {
   content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(46, 47, 66, 0.7); 
-}
 
-.top-section .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 48px;
-  position: relative;
-  z-index: 1;
-}
-
-.nav .link.current {
-  position: relative;
-}
-
-.nav .link.current::after {
-  content: '';
   position: absolute;
   left: 0;
   bottom: -1px;
   width: 100%;
   height: 4px;
-  background-color: var(--pressed-state);
+  background-color: #404bbf;
   border-radius: 2px;
-}
+ 
 
-.nav-list,
-.header .contacts-list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-  padding: 24px 0;
-}
-
-.logo .accent {
-  color: var(--dark);
-}
-
-.nav-list {
-  font-weight: 500;
-  font-size: 16px;
-}
-
-.nav-list .link:focus {
-  color: var(--pressed-state);
 }
 
 .contacts {
   font-style: normal;
-}
-.contacts .list .link {
-  color: var(--text-color);
-  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  margin-left: auto;
 }
 
-.contacts .list .link:hover,
-.contacts .list .link:focus {
-  color: var(--pressed-state);
+.contacts-item {
+
 }
 
-.top-section {
-  background-color: var(--dark);
+.contacts-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+ 
 }
 
-.top-section .section-title {
-  color: var(--white-color);
+.contacts-link {
+  display: block;
+  padding: 24px 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   }
+
+.nav-link:hover,
+.nav-link:focus,
+.contacts-link:hover,
+.contacts-link:focus,
+.nav-link.current {
+  color: #404bbf; 
+  
+}
+
+.hero {
+  max-width: 1440px;
+  max-height: 600px;
+  background-color: #2e2f42;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
+  url(../images/office.jpg);
+  padding: 188px 0;
+  margin: 0 auto;
+}
+.container-hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+
+}
+
+.hero-title {
+  
+  font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
+  color: #ffffff;
   max-width: 496px;
+  
+
 }
 
-.adv-link-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 112px;
+.btn {
+  margin-top: 48px;
+  min-width: 169px;
+  height: 56px;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
   border-radius: 4px;
-  background-color: var(--light);
-  margin-bottom: 8px;
-  border: 1px solid rgba(142, 143, 153, 1)
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.primary-btn {
+.btn-accent {
+  padding: 16px 32px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  background-color: var(--primary-brand);
-  color: var(--white-color);
-  cursor: pointer;
-  padding: 16px 32px;
-  border: none;
-  border-radius: 4px;
-  font-weight: 400;
-  border-radius: 4px;
-  min-width: 169px;
-  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  color: #ffffff;
+      
 }
 
-.primary-btn:hover {
-  background-color: var(--pressed-state);
+.btn:hover,
+.btn:focus {
+  background-color: #404bbf;
 }
 
-.primary-btn:focus {
-  background-color: var(--pressed-state);
-}
 
-.section-title {
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  text-align: center;
-  color: var(--dark);
-}
-
-.description {
-  color: var(--text-color);
-}
-
-.list-title {
-  color: var(--dark);
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  margin-bottom: 8px;
-}
-
-.list-text {
-  font-size: 16px;
-}
-
-.services-section .section-title {
-  line-height: 1.2;
-}
-
-.services-section .list {
-  display: flex;
-  gap: 24px;
-  margin: 0 auto;
-}
-
-.services-section .list .list-item {
-  flex-basis: calc((100% - 72px) / 4);
-}
-
-.team-section {
-  background-color: var(--light);
-}
-
-.team-section .section-title {
-  text-align: center;
-  text-transform: capitalize;
-  margin-bottom: 72px;
-}
-
-.team-section .list {
-  display: flex;
-  gap: 24px;
-  justify-content: center;
-  width: 100%;
-}
-
-.team-section .team-card {
-  background-color: var(--white-color);
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  text-align: center;
-  padding-bottom: 32px;
-}
-
-.team-card .description {
-  margin-bottom: 8px;
-}
-
-.team-section .team-card .list-title {
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  margin-top: 32px;
-}
-
-.team-section .team-card .list-text {
-  color: var(--text-color);
-}
-
-.footer {
-  background-color: var(--dark);
-  color: var(--white-color);
-  padding: 100px 0;
-  display: flex;
-  align-items: baseline;
-}
-
-.footer .link {
-  display: inline-block;
-  margin-bottom: 16px;
-}
-
-.footer .logo .accent {
-  color: var(--light);
-}
-
-.footer .footer-description {
-  color: var(--light);
-  max-width: 264px;
-}
-
-.footer .container {
-  display: flex;
-  gap: 120px
-}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -330,57 +232,145 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+
 }
 
-.portfolio .section-title {
-  margin-bottom: 72px;
+.benefits {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
-.portfolio .list {
+
+.container-benefits {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.benefits-list {
   display: flex;
   gap: 24px;
-  row-gap: 48px;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.portfolio .list .tile {
-  flex-basis: calc((100% - 48px) / 3);
-  overflow: hidden;
-  box-sizing: border-box;
-}
-
-.portfolio .border-container {
-  padding: 32px 16px;
-}
-
-.tile {
-  position: relative;
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: translateY(100%); 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
-  height: 100%;
-  display: flex;
-  padding: 40px 32px;
+}
+
+.benefits-item {
+  width: calc((100% - (24px * 3)) / 4);
+
+}
+
+.benefits-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+ 
+}
+
+.benefits-text {
   font-weight: 400;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
-  background-color: #4d5ae5;
-}
-.tile:hover .overlay {
-  transform: translateY(0);
+ 
 }
 
-.border-container {
-  border: 1px solid #e7e9fc;
-  border-top: none;
-  padding: 32px 0;
+.benefits-icon {
+  margin-bottom: 8px;
+  border: 1px solid #8e8f99;
+      border-radius: 4px;
+      width: 264px;
+      height: 112px;
+      background-color: #f4f4fd;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 24px 100px;
 }
+.icon {
+ 
+}
+
+
+
+
+.team {
+  background-color: #f4f4fd;
+  padding: 120px 0 120px;
+ 
+}
+
+.team-title {
+  margin-bottom: 72px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize
+}
+
+.container-team {
+ 
+}
+
+.section-title {
+ 
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
+  width: 100%;
+}
+
+.team-item {
+  border-radius: 0 0 4px 4px;
+  
+  width: 264px;
+  height: 380px;
+  background-color: #FFFFFF;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    
+
+}
+
+.team-img {}
+
+.container-team-subtitle {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+ 
+  align-items: center;
+  justify-content: center;
+  width: 232px;
+  height: 104px;
+  margin: 0 auto;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.team-member {
+  margin-top: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+
+.team-caption {
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  
+}
+
+
 
 .socials {
   display: flex;
@@ -429,6 +419,118 @@ body {
   background-color: #404bbf;
 }
 
+
+.portfolio {
+  
+  padding: 120px 0 120px;
+
+}
+
+.portfolio-title {
+  margin-bottom: 72px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize
+}
+
+.portfolio-list {
+  display: flex;
+      flex-wrap: wrap;
+      gap: 48px 24px;
+      width: 100%;
+}
+
+.portfolio-item {
+  width: calc((100% - (24px * 2)) / 3);
+  width: 360px;
+  height: 420px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
+ 
+}
+
+.portfolio-img {}
+
+.portfolio-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%); 
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  padding: 40px 32px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  
+}
+.portfolio-item:hover .overlay {
+  transform: translateY(0);
+  
+}
+
+.portfolio-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.container-portfolio-subtitle {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+.portfolio-subtitle {
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.portfolio-caption {
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+ 
+}
+.page-footer {
+  background-color: #2e2f42;
+  padding: 100px 0;
+  
+}
+
+.container-footer {
+  display: flex;
+  align-items: baseline;
+}
+
+.container-logo-footer {
+  display: flex;
+  flex-direction:column;
+  align-items: baseline;
+  gap: 16px;
+  color: #f4f4fd;
+  width: 264px;
+  margin-right: 120px;
+}
+
+.footer-logo {
+  
+}
 
 .footer-socials-subtitle {
   font-weight: 500;
